--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 language: python
 python:
   - "3.4"
-
-script: python tests/DemoServer.py
+script: "python setup.py install && python tests/DemoServer.py"
