--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: python
 python:
-  - "3.4"
+  - "3.5"
 install:
-  - "pip install requests"
-script: python TestServer.py
+  - "pip install -r requirements.txt"
